updated code to save losses to file

--- a/src/deep_imputation_brats_uncertainty.ipynb
+++ b/src/deep_imputation_brats_uncertainty.ipynb
@@ -151,6 +151,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "run_id = 0 # set this to prevent overlapped saving of model and data\n",
+        "root_dir\n",
+        "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
+        "os.makedirs(save_dir, exist_ok=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "kXLaSctjKX7Q"
@@ -297,8 +316,8 @@
       },
       "outputs": [],
       "source": [
-        "train_subs = Subset(sample_ds, list(range(3)))\n",
-        "val_subs = Subset(sample_ds, list(range(2)))\n",
+        "train_subs = Subset(sample_ds, list(range(200)))\n",
+        "val_subs = Subset(sample_ds, list(range(40)))\n",
         "\n",
         "train_loader = DataLoader(train_subs, batch_size=1, shuffle=True, num_workers=2)\n",
         "val_loader = DataLoader(val_subs, batch_size=1, shuffle=False, num_workers=2)\n",
@@ -376,9 +395,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "YmxkPH4GKX7T"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "def GaussianLikelihood(expected_img, output_img):\n",
@@ -392,13 +409,22 @@
         "\n",
         "    cost2 = output_img_log_std\n",
         "\n",
-        "    return torch.mean(cost1 + cost2)\n",
-        "\n",
+        "    return torch.mean(cost1 + cost2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "YmxkPH4GKX7T"
+      },
+      "outputs": [],
+      "source": [
         "import torch.nn as nn\n",
         "from monai.metrics import MSEMetric\n",
         "\n",
-        "max_epochs = 2 # 300\n",
-        "val_interval = 1\n",
+        "max_epochs = 200 # 300\n",
+        "val_interval = 2\n",
         "VAL_AMP = True\n",
         "\n",
         "# Define the loss function\n",
@@ -433,6 +459,13 @@
         "scaler = torch.cuda.amp.GradScaler()\n",
         "# enable cuDNN benchmark\n",
         "torch.backends.cudnn.benchmark = True"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Run the following cells only if performing a new trial/run"
       ]
     },
     {
@@ -519,7 +552,7 @@
         "                best_metrics_epochs_and_time[2].append(time.time() - total_start)\n",
         "                torch.save(\n",
         "                    model.state_dict(),\n",
-        "                    os.path.join(root_dir, \"best_metric_model.pth\"),\n",
+        "                    os.path.join(save_dir, \"best_metric_model.pth\"),\n",
         "                )\n",
         "                print(\"saved new best metric model\")\n",
         "            print(\n",
@@ -541,6 +574,39 @@
       "outputs": [],
       "source": [
         "print(f\"train completed, best_metric: {best_metric:.4f} at epoch: {best_metric_epoch}, total time: {total_time}.\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save the loss list\n",
+        "np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
+        "np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
+        "del epoch_loss_values, metric_values"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Run from here to re-plot the loss"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Load the save list\n",
+        "epoch_loss_values = np.load(os.path.join(save_dir, 'epoch_loss_values.npy')).tolist()\n",
+        "metric_values = np.load(os.path.join(save_dir, 'metric_values.npy')).tolist()\n",
+        "\n",
+        "print(epoch_loss_values)\n",
+        "print(metric_values)\n"
       ]
     },
     {
@@ -567,6 +633,7 @@
         "y = epoch_loss_values\n",
         "plt.xlabel(\"epoch\")\n",
         "plt.plot(x, y, color=\"red\")\n",
+        "plt.yscale('log')\n",
         "plt.subplot(1, 2, 2)\n",
         "plt.title(\"Val Mean MSE\")\n",
         "x = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
@@ -593,7 +660,7 @@
       },
       "outputs": [],
       "source": [
-        "model.load_state_dict(torch.load(os.path.join(root_dir, \"best_metric_model.pth\")))\n",
+        "model.load_state_dict(torch.load(os.path.join(save_dir, \"best_metric_model.pth\")))\n",
         "model.eval()\n",
         "with torch.no_grad():\n",
         "    # select one image to evaluate and visualize the model output\n",
