added function to check if notebook

--- a/src/deep_imputation_brats_uncertainty.ipynb
+++ b/src/deep_imputation_brats_uncertainty.ipynb
@@ -17,6 +17,46 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Check if this is a notebook or not"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "This is a Jupyter Notebook.\n"
+          ]
+        }
+      ],
+      "source": [
+        "def is_notebook():\n",
+        "    try:\n",
+        "        shell = get_ipython().__class__.__name__\n",
+        "        if shell == 'ZMQInteractiveShell':\n",
+        "            return True  # Jupyter notebook or Jupyter QtConsole\n",
+        "        elif shell == 'TerminalInteractiveShell':\n",
+        "            return False  # Terminal running IPython\n",
+        "        else:\n",
+        "            return False  # Other types\n",
+        "    except NameError:\n",
+        "        return False  # Standard Python interpreter\n",
+        "\n",
+        "# Example usage\n",
+        "if is_notebook():\n",
+        "    print(\"This is a Jupyter Notebook.\")\n",
+        "else:\n",
+        "    print(\"This is not a Jupyter Notebook.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "S0snKkoyKX7M"
       },
@@ -76,6 +116,7 @@
         "    AsDiscrete,\n",
         "    Compose,\n",
         ")\n",
+        "from monai.networks.nets import UNet\n",
         "from monai.transforms import (\n",
         "    LoadImage,\n",
         "    NormalizeIntensity,\n",
@@ -88,12 +129,14 @@
         "    EnsureType,\n",
         "    EnsureChannelFirst,\n",
         ")\n",
+        "from monai.metrics import MSEMetric\n",
         "from monai.utils import set_determinism\n",
         "from tqdm import tqdm\n",
         "\n",
         "import pdb\n",
         "import os\n",
         "import torch\n",
+        "import torch.nn as nn\n",
         "from torch.utils.data import Dataset\n",
         "from torch.utils.data import DataLoader, Subset\n",
         "import numpy as np\n",
@@ -156,10 +199,18 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 0 # set this to prevent overlapped saving of model and data\n",
-        "root_dir\n",
+        "run_id = 1 # set this to prevent overlapped saving of model and data\n",
         "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
-        "os.makedirs(save_dir, exist_ok=True)"
+        "os.makedirs(save_dir, exist_ok=True)\n",
+        "\n",
+        "IS_NOTEBOOK = True # set this if this is a jupyter notebook. False if a python script"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Set parameters"
       ]
     },
     {
@@ -167,7 +218,10 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "max_epochs = 150 # 300\n",
+        "val_interval = 2"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -342,15 +396,16 @@
       "outputs": [],
       "source": [
         "# pick one image from DecathlonDataset to visualize and check the 4 channels\n",
-        "val_data_example = sample_ds[6]\n",
-        "print(f\"image shape: {val_data_example['image'].shape}\")\n",
-        "plt.figure(\"image\", (24, 6))\n",
-        "for i in range(4):\n",
-        "    plt.subplot(1, 4, i + 1)\n",
-        "    plt.title(f\"image channel {i}\")\n",
-        "    plt.imshow(val_data_example[\"image\"][i, :, :, 60].detach().cpu(), cmap=\"gray\")\n",
-        "    plt.colorbar()\n",
-        "plt.show()"
+        "if is_notebook():\n",
+        "    val_data_example = sample_ds[6]\n",
+        "    print(f\"image shape: {val_data_example['image'].shape}\")\n",
+        "    plt.figure(\"image\", (24, 6))\n",
+        "    for i in range(4):\n",
+        "        plt.subplot(1, 4, i + 1)\n",
+        "        plt.title(f\"image channel {i}\")\n",
+        "        plt.imshow(val_data_example[\"image\"][i, :, :, 60].detach().cpu(), cmap=\"gray\")\n",
+        "        plt.colorbar()\n",
+        "    plt.show()"
       ]
     },
     {
@@ -379,7 +434,6 @@
       },
       "outputs": [],
       "source": [
-        "from monai.networks.nets import UNet\n",
         "\n",
         "device = torch.device(\"cuda:0\")\n",
         "model = UNet(\n",
@@ -420,11 +474,7 @@
       },
       "outputs": [],
       "source": [
-        "import torch.nn as nn\n",
-        "from monai.metrics import MSEMetric\n",
         "\n",
-        "max_epochs = 200 # 300\n",
-        "val_interval = 2\n",
         "VAL_AMP = True\n",
         "\n",
         "# Define the loss function\n",
@@ -626,21 +676,22 @@
       },
       "outputs": [],
       "source": [
-        "plt.figure(\"train\", (12, 6))\n",
-        "plt.subplot(1, 2, 1)\n",
-        "plt.title(\"Epoch Average Loss\")\n",
-        "x = [i + 1 for i in range(len(epoch_loss_values))]\n",
-        "y = epoch_loss_values\n",
-        "plt.xlabel(\"epoch\")\n",
-        "plt.plot(x, y, color=\"red\")\n",
-        "plt.yscale('log')\n",
-        "plt.subplot(1, 2, 2)\n",
-        "plt.title(\"Val Mean MSE\")\n",
-        "x = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
-        "y = metric_values\n",
-        "plt.xlabel(\"epoch\")\n",
-        "plt.plot(x, y, color=\"green\")\n",
-        "plt.show()"
+        "if is_notebook():\n",
+        "    plt.figure(\"train\", (12, 6))\n",
+        "    plt.subplot(1, 2, 1)\n",
+        "    plt.title(\"Epoch Average Loss\")\n",
+        "    x = [i + 1 for i in range(len(epoch_loss_values))]\n",
+        "    y = epoch_loss_values\n",
+        "    plt.xlabel(\"epoch\")\n",
+        "    plt.plot(x, y, color=\"red\")\n",
+        "    plt.yscale('log')\n",
+        "    plt.subplot(1, 2, 2)\n",
+        "    plt.title(\"Val Mean MSE\")\n",
+        "    x = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
+        "    y = metric_values\n",
+        "    plt.xlabel(\"epoch\")\n",
+        "    plt.plot(x, y, color=\"green\")\n",
+        "    plt.show()"
       ]
     },
     {
@@ -660,34 +711,35 @@
       },
       "outputs": [],
       "source": [
-        "model.load_state_dict(torch.load(os.path.join(save_dir, \"best_metric_model.pth\")))\n",
-        "model.eval()\n",
-        "with torch.no_grad():\n",
-        "    # select one image to evaluate and visualize the model output\n",
-        "    val_input = sample_ds[6][\"image\"].unsqueeze(0).to(device)\n",
-        "    mask_indices = [True, False, False, False]\n",
-        "    val_input[:, mask_indices, ...] = 0\n",
-        "    val_output = inference(val_input)\n",
-        "    # val_output = post_trans(val_output[0])\n",
-        "    plt.figure(\"image\", (24, 6))\n",
-        "    for i in range(4):\n",
-        "        plt.subplot(1, 4, i + 1)\n",
-        "        plt.title(f\"image channel {i}\")\n",
-        "        plt.imshow(val_input[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-        "    plt.show()\n",
-        "    # visualize the 3 channels model output corresponding to this image\n",
-        "    plt.figure(\"output mean\", (24, 6))\n",
-        "    for i in range(4):\n",
-        "        plt.subplot(1, 4, i + 1)\n",
-        "        plt.title(f\"output channel {i}\")\n",
-        "        plt.imshow(val_output[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
+        "if is_notebook():\n",
+        "    model.load_state_dict(torch.load(os.path.join(save_dir, \"best_metric_model.pth\")))\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        # select one image to evaluate and visualize the model output\n",
+        "        val_input = sample_ds[6][\"image\"].unsqueeze(0).to(device)\n",
+        "        mask_indices = [True, False, False, False]\n",
+        "        val_input[:, mask_indices, ...] = 0\n",
+        "        val_output = inference(val_input)\n",
+        "        # val_output = post_trans(val_output[0])\n",
+        "        plt.figure(\"image\", (24, 6))\n",
+        "        for i in range(4):\n",
+        "            plt.subplot(1, 4, i + 1)\n",
+        "            plt.title(f\"image channel {i}\")\n",
+        "            plt.imshow(val_input[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
+        "        plt.show()\n",
+        "        # visualize the 3 channels model output corresponding to this image\n",
+        "        plt.figure(\"output mean\", (24, 6))\n",
+        "        for i in range(4):\n",
+        "            plt.subplot(1, 4, i + 1)\n",
+        "            plt.title(f\"output channel {i}\")\n",
+        "            plt.imshow(val_output[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
         "\n",
-        "    plt.figure(\"output std\", (24, 6))\n",
-        "    for i in range(4):\n",
-        "        plt.subplot(1, 4, i + 1)\n",
-        "        plt.title(f\"output channel {i}\")\n",
-        "        plt.imshow(val_output[0, i+4, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-        "    plt.show()"
+        "        plt.figure(\"output std\", (24, 6))\n",
+        "        for i in range(4):\n",
+        "            plt.subplot(1, 4, i + 1)\n",
+        "            plt.title(f\"output channel {i}\")\n",
+        "            plt.imshow(val_output[0, i+4, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
+        "        plt.show()"
       ]
     },
     {
