added notebook to analyse results

--- a/src/deep_imputation_brats_uncertainty.ipynb
+++ b/src/deep_imputation_brats_uncertainty.ipynb
@@ -52,7 +52,7 @@
         "if is_notebook():\n",
         "    print(\"This is a Jupyter Notebook.\")\n",
         "else:\n",
-        "    print(\"This is not a Jupyter Notebook.\")"
+        "    print(\"This is a Python script (not a Jupyter Notebook).\")"
       ]
     },
     {
@@ -77,10 +77,11 @@
       },
       "outputs": [],
       "source": [
-        "!python -c \"import monai\" || pip install -q \"monai-weekly[nibabel, tqdm]\"\n",
-        "!python -c \"import matplotlib\" || pip install -q matplotlib\n",
-        "# !python -c \"import onnxruntime\" || pip install -q onnxruntime\n",
-        "%matplotlib inline"
+        "if is_notebook():\n",
+        "    !python -c \"import monai\" || pip install -q \"monai-weekly[nibabel, tqdm]\"\n",
+        "    !python -c \"import matplotlib\" || pip install -q matplotlib\n",
+        "    # !python -c \"import onnxruntime\" || pip install -q onnxruntime\n",
+        "    %matplotlib inline"
       ]
     },
     {
