--- a/src/deep_imputation_brats_uncertainty.ipynb
+++ b/src/deep_imputation_brats_uncertainty.ipynb
@@ -19,22 +19,40 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Set parameters"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "run_id = 4 # set this to prevent overlapped saving of model and data\n",
+        "\n",
+        "DO_MASK = False # Set to True if mask is to be applied while training\n",
+        "SET_VARIANCE = False # Set to True if variance is to be trained in loss function\n",
+        "\n",
+        "max_epochs = 150\n",
+        "val_interval = 1\n",
+        "train_data_ratio = 0.5 # ratio of total data (484) to be used for training\n",
+        "val_data_ratio = 0.1 # ratio of total data (484) to be used for validating\n",
+        "\n",
+        "RANDOM_SEED = 0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Check if this is a notebook or not"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "This is a Jupyter Notebook.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def is_notebook():\n",
         "    try:\n",
@@ -200,28 +218,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 1 # set this to prevent overlapped saving of model and data\n",
         "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
-        "os.makedirs(save_dir, exist_ok=True)\n",
-        "\n",
-        "IS_NOTEBOOK = True # set this if this is a jupyter notebook. False if a python script"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Set parameters"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "max_epochs = 150 # 300\n",
-        "val_interval = 2"
+        "if os.path.exists(save_dir) and os.path.isdir(save_dir):\n",
+        "    print(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
+        "    exit()\n",
+        "else:\n",
+        "    os.makedirs(save_dir)"
       ]
     },
     {
@@ -241,7 +243,7 @@
       },
       "outputs": [],
       "source": [
-        "set_determinism(seed=0)"
+        "set_determinism(seed=RANDOM_SEED)"
       ]
     },
     {
@@ -316,6 +318,28 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "def int_to_bool_binary(int_list, length):\n",
+        "    # Convert each integer to its base-2 value and represent it as boolean, always ensuring length is 4\n",
+        "    bool_list = []\n",
+        "    \n",
+        "    for num in int_list:\n",
+        "        # Get the binary representation of the integer (excluding the '0b' prefix)\n",
+        "        binary_str = bin(num)[2:]\n",
+        "        # Convert each character in the binary string to a boolean\n",
+        "        bools = [char == '1' for char in binary_str]\n",
+        "        # Prepend False (0s) to make the length exactly 4\n",
+        "        bools_padded = [False] * (length - len(bools)) + bools\n",
+        "        bool_list.append(bools_padded)\n",
+        "    \n",
+        "    return bool_list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "class BrainMRIDataset(Dataset):\n",
         "    def __init__(self, root_dir, transform=None):\n",
         "        self.root_dir = os.path.join(root_dir, \"Task01_BrainTumour\")\n",
@@ -325,8 +349,13 @@
         "\n",
         "        self.image_filenames = data_json['training']\n",
         "\n",
-        "        np.random.seed(0)\n",
-        "        self.seq_mask = np.random.rand(len(self.image_filenames), 4) < 0.2\n",
+        "        np.random.seed(RANDOM_SEED)\n",
+        "        num_seq = 4\n",
+        "        if DO_MASK:\n",
+        "            mask_drop_code = np.random.randint(0, 2**(num_seq) - 1, size=len(self.image_filenames))\n",
+        "            self.seq_mask = int_to_bool_binary(mask_drop_code, length=num_seq)\n",
+        "        else:\n",
+        "            self.seq_mask = np.full((len(self.image_filenames), num_seq), False, dtype=bool)\n",
         "\n",
         "        self.transform = transform\n",
         "\n",
@@ -371,8 +400,8 @@
       },
       "outputs": [],
       "source": [
-        "train_subs = Subset(sample_ds, list(range(200)))\n",
-        "val_subs = Subset(sample_ds, list(range(40)))\n",
+        "train_subs = Subset(sample_ds, list(range(int(train_data_ratio * len(sample_ds)))))\n",
+        "val_subs = Subset(sample_ds, list(range(int(val_data_ratio* len(sample_ds)))))\n",
         "\n",
         "train_loader = DataLoader(train_subs, batch_size=1, shuffle=True, num_workers=2)\n",
         "val_loader = DataLoader(val_subs, batch_size=1, shuffle=False, num_workers=2)\n",
@@ -435,7 +464,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "device = torch.device(\"cuda:0\")\n",
         "model = UNet(\n",
         "    spatial_dims=3, # 3D\n",
@@ -455,11 +483,13 @@
       "source": [
         "def GaussianLikelihood(expected_img, output_img):\n",
         "    # input is 4 channel images, output is 8 channel images\n",
-        "    # TODO (DONE): Deal sigma<=0 issue by either initializing to 1 or adding a small constant\n",
-        "    #   Dealt it using sigma\n",
         "\n",
         "    output_img_mean = output_img[:, :4, ...]\n",
-        "    output_img_log_std = output_img[:, 4:, ...]\n",
+        "    if SET_VARIANCE:\n",
+        "        output_img_log_std = output_img[:, 4:, ...]\n",
+        "    else:\n",
+        "        output_img_log_std = torch.zeros_like(output_img[:, 4:, ...]) # sigma = 1\n",
+        "\n",
         "    cost1 = (expected_img - output_img_mean)**2 / (2*torch.exp(2*output_img_log_std))\n",
         "\n",
         "    cost2 = output_img_log_std\n",
@@ -475,17 +505,12 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "VAL_AMP = True\n",
         "\n",
         "# Define the loss function\n",
         "loss_function = GaussianLikelihood #nn.MSELoss()\n",
-        "# loss_function = DiceLoss(smooth_nr=0, smooth_dr=1e-5, squared_pred=True, to_onehot_y=False, sigmoid=True)\n",
         "optimizer = torch.optim.Adam(model.parameters(), 1e-4, weight_decay=1e-5)\n",
         "lr_scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=max_epochs)\n",
-        "\n",
-        "# mse_metric = DiceMetric(include_background=True, reduction=\"mean\")\n",
-        "# mse_metric_batch = DiceMetric(include_background=True, reduction=\"mean_batch\")\n",
         "\n",
         "mse_metric = MSEMetric(reduction=\"mean\")\n",
         "mse_metric_batch = MSEMetric(reduction=\"mean_batch\")\n",
@@ -637,110 +662,6 @@
         "np.save(os.path.join(save_dir, 'epoch_loss_values.npy'), np.array(epoch_loss_values))\n",
         "np.save(os.path.join(save_dir, 'metric_values.npy'), np.array(metric_values))\n",
         "del epoch_loss_values, metric_values"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Run from here to re-plot the loss"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Load the save list\n",
-        "epoch_loss_values = np.load(os.path.join(save_dir, 'epoch_loss_values.npy')).tolist()\n",
-        "metric_values = np.load(os.path.join(save_dir, 'metric_values.npy')).tolist()\n",
-        "\n",
-        "print(epoch_loss_values)\n",
-        "print(metric_values)\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "riunGatZKX7U"
-      },
-      "source": [
-        "## Plot the loss and metric"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "857pko9yKX7U"
-      },
-      "outputs": [],
-      "source": [
-        "if is_notebook():\n",
-        "    plt.figure(\"train\", (12, 6))\n",
-        "    plt.subplot(1, 2, 1)\n",
-        "    plt.title(\"Epoch Average Loss\")\n",
-        "    x = [i + 1 for i in range(len(epoch_loss_values))]\n",
-        "    y = epoch_loss_values\n",
-        "    plt.xlabel(\"epoch\")\n",
-        "    plt.plot(x, y, color=\"red\")\n",
-        "    plt.yscale('log')\n",
-        "    plt.subplot(1, 2, 2)\n",
-        "    plt.title(\"Val Mean MSE\")\n",
-        "    x = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
-        "    y = metric_values\n",
-        "    plt.xlabel(\"epoch\")\n",
-        "    plt.plot(x, y, color=\"green\")\n",
-        "    plt.show()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "q5KqMhb9KX7U"
-      },
-      "source": [
-        "## Check best pytorch model output with the input image and label"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "b6qGjJlIKX7U"
-      },
-      "outputs": [],
-      "source": [
-        "if is_notebook():\n",
-        "    model.load_state_dict(torch.load(os.path.join(save_dir, \"best_metric_model.pth\")))\n",
-        "    model.eval()\n",
-        "    with torch.no_grad():\n",
-        "        # select one image to evaluate and visualize the model output\n",
-        "        val_input = sample_ds[6][\"image\"].unsqueeze(0).to(device)\n",
-        "        mask_indices = [True, False, False, False]\n",
-        "        val_input[:, mask_indices, ...] = 0\n",
-        "        val_output = inference(val_input)\n",
-        "        # val_output = post_trans(val_output[0])\n",
-        "        plt.figure(\"image\", (24, 6))\n",
-        "        for i in range(4):\n",
-        "            plt.subplot(1, 4, i + 1)\n",
-        "            plt.title(f\"image channel {i}\")\n",
-        "            plt.imshow(val_input[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-        "        plt.show()\n",
-        "        # visualize the 3 channels model output corresponding to this image\n",
-        "        plt.figure(\"output mean\", (24, 6))\n",
-        "        for i in range(4):\n",
-        "            plt.subplot(1, 4, i + 1)\n",
-        "            plt.title(f\"output channel {i}\")\n",
-        "            plt.imshow(val_output[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-        "\n",
-        "        plt.figure(\"output std\", (24, 6))\n",
-        "        for i in range(4):\n",
-        "            plt.subplot(1, 4, i + 1)\n",
-        "            plt.title(f\"output channel {i}\")\n",
-        "            plt.imshow(val_output[0, i+4, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-        "        plt.show()"
       ]
     },
     {
