ran experiments with setting variance and mask

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -19,7 +19,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Set parameters"
+        "### Set parameters\n",
+        "\n",
+        "* run_id : set this to prevent overlapped saving of model and data\n",
+        "\n",
+        "* DO_MASK : Set to True if mask is to be applied while training\n",
+        "* SET_VARIANCE : Set to True if variance is to be trained in loss function\n",
+        "\n",
+        "* max_epochs\n",
+        "* val_interval : how frequently the validation code should be run\n",
+        "* train_data_ratio : ratio of total data (484) to be used for training\n",
+        "* val_data_ratio : ratio of total data (484) to be used for validating"
       ]
     },
     {
@@ -28,17 +38,23 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 4 # set this to prevent overlapped saving of model and data\n",
-        "\n",
-        "DO_MASK = False # Set to True if mask is to be applied while training\n",
-        "SET_VARIANCE = False # Set to True if variance is to be trained in loss function\n",
-        "\n",
-        "max_epochs = 150\n",
+        "run_id = 6\n",
+        "DO_MASK = True\n",
+        "SET_VARIANCE = False\n",
+        "max_epochs = 100\n",
         "val_interval = 1\n",
-        "train_data_ratio = 0.5 # ratio of total data (484) to be used for training\n",
-        "val_data_ratio = 0.1 # ratio of total data (484) to be used for validating\n",
+        "train_data_ratio = 0.5\n",
+        "val_data_ratio = 0.1\n",
+        "RANDOM_SEED = 0\n",
         "\n",
-        "RANDOM_SEED = 0"
+        "print(\"run_id: \", run_id)\n",
+        "print(\"DO_MASK: \", DO_MASK)\n",
+        "print(\"SET_VARIANCE: \", SET_VARIANCE)\n",
+        "print(\"max_epochs: \", max_epochs)\n",
+        "print(\"val_interval: \", val_interval)\n",
+        "print(\"train_data_ratio: \", train_data_ratio)\n",
+        "print(\"val_data_ratio: \", val_data_ratio)\n",
+        "print(\"RANDOM_SEED: \", RANDOM_SEED)"
       ]
     },
     {
@@ -331,7 +347,7 @@
         "        bools_padded = [False] * (length - len(bools)) + bools\n",
         "        bool_list.append(bools_padded)\n",
         "    \n",
-        "    return bool_list"
+        "    return np.array(bool_list)"
       ]
     },
     {
