--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 0 # set this to prevent overlapped saving of model and data"
+    "run_id = 7 # set this to prevent overlapped saving of model and data"
    ]
   },
   {
@@ -62,7 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = os.path.join(root_dir, f\"run_{run_id}\")"
+    "load_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
+    "fig_save_dir = os.path.join(\"..\", \"figs\", f\"run_{run_id}\")\n",
+    "os.makedirs(fig_save_dir, exist_ok=True)"
    ]
   },
   {
@@ -71,11 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_loss_values = np.load(os.path.join(save_dir, 'epoch_loss_values.npy')).tolist()\n",
-    "metric_values = np.load(os.path.join(save_dir, 'metric_values.npy')).tolist()\n",
-    "\n",
-    "print(epoch_loss_values)\n",
-    "print(metric_values)"
+    "epoch_loss_values = np.load(os.path.join(load_dir, 'epoch_loss_values.npy')).tolist()\n",
+    "metric_values = np.load(os.path.join(load_dir, 'metric_values.npy')).tolist()"
    ]
   },
   {
@@ -104,35 +103,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(\"train\", (16, 5))\n",
-    "plt.subplot(1, 3, 1)\n",
-    "plt.title(\"Epoch Average Loss\")\n",
+    "plt.figure(\"train\", (6, 4))\n",
+    "# plt.subplot(1, 3, 1)\n",
     "x = [i + 1 for i in range(len(epoch_loss_values))]\n",
     "y = epoch_loss_values\n",
     "plt.xlabel(\"epoch\")\n",
     "plt.ylabel(\"loss - log\")\n",
-    "plt.plot(x, y, color=\"red\")\n",
     "plt.yscale('log')\n",
+    "plt.plot(x, y, color=\"red\")\n",
+    "plt.title(\"Training: Gaussian Log Likelihood Loss\")\n",
+    "plt.savefig(os.path.join(fig_save_dir, \"train_plot.png\"), facecolor='white')\n",
+    "plt.show()\n",
     "\n",
     "\n",
-    "k = 2\n",
-    "for zoom in [5,10]:\n",
-    "    if len(x) > zoom:\n",
-    "        plt.subplot(1, 3, k)\n",
-    "        plt.title(\"Epoch Average Loss (Zoomed in)\")\n",
-    "        x = [i + 1 for i in range(len(epoch_loss_values))]\n",
-    "        y = epoch_loss_values\n",
-    "        plt.xlabel(f\"epoch (from ep. {zoom})\")\n",
-    "        plt.ylabel(\"loss\")\n",
-    "        plt.plot(x[zoom:], y[zoom:], color=\"red\")\n",
-    "    k += 1\n",
+    "# k = 2\n",
+    "# for zoom in [5,10]:\n",
+    "#     if len(x) > zoom:\n",
+    "#         plt.subplot(1, 3, k)\n",
+    "#         # plt.title(f\"Epoch Average Loss (from ep. {zoom})\")\n",
+    "#         x = [i + 1 for i in range(len(epoch_loss_values))]\n",
+    "#         y = epoch_loss_values\n",
+    "#         plt.xlabel(f\"epoch (from ep. {zoom})\")\n",
+    "#         # plt.ylabel(\"loss\")\n",
+    "#         plt.suptitle(\"Training: Gaussian Log Likelihood Loss\")\n",
+    "#         plt.plot(x[zoom:], y[zoom:], color=\"red\")\n",
+    "#     k += 1\n",
     "\n",
-    "plt.figure(\"val\", (5,5))\n",
-    "plt.title(\"Val Mean MSE\")\n",
+    "plt.figure(\"val\", (6, 4))\n",
+    "plt.title(\"Validation: MSE\")\n",
     "x_val = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
     "y_val = metric_values\n",
     "plt.xlabel(\"epoch\")\n",
     "plt.plot(x_val, y_val, color=\"green\")\n",
+    "plt.savefig(os.path.join(fig_save_dir, \"val_plot.png\"), facecolor='white')\n",
     "plt.show()"
    ]
   },
@@ -277,34 +280,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load(os.path.join(save_dir, \"best_metric_model.pth\")))\n",
+    "def GaussianLikelihood(expected_img, output_img):\n",
+    "    output_img_mean = output_img[:, :4, ...]\n",
+    "    output_img_log_std = output_img[:, 4:, ...]\n",
+    "\n",
+    "    cost1 = (expected_img - output_img_mean)**2 / (2*torch.exp(2*output_img_log_std))\n",
+    "\n",
+    "    cost2 = output_img_log_std\n",
+    "\n",
+    "    return torch.mean(cost1 + cost2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\")))\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    # select one image to evaluate and visualize the model output\n",
     "    val_input = sample_ds[6][\"image\"].unsqueeze(0).to(device)\n",
-    "    mask_indices = [True, False, False, False]\n",
+    "    mask_indices = [False, False, False, False]\n",
     "    val_input[:, mask_indices, ...] = 0\n",
     "    val_output = inference(val_input)\n",
     "    # val_output = post_trans(val_output[0])\n",
-    "    plt.figure(\"image\", (24, 6))\n",
+    "    plt.figure(\"image\", (24, 18))\n",
     "    for i in range(4):\n",
-    "        plt.subplot(1, 4, i + 1)\n",
+    "        plt.subplot(3, 4, i + 1)\n",
     "        plt.title(f\"image channel {i}\")\n",
     "        plt.imshow(val_input[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-    "    plt.show()\n",
-    "    # visualize the 3 channels model output corresponding to this image\n",
-    "    plt.figure(\"output mean\", (24, 6))\n",
+    "\n",
     "    for i in range(4):\n",
-    "        plt.subplot(1, 4, i + 1)\n",
-    "        plt.title(f\"output channel {i}\")\n",
+    "        plt.subplot(3, 4, 4 + i + 1)\n",
+    "        plt.title(f\"mean channel {i}\")\n",
     "        plt.imshow(val_output[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
     "\n",
-    "    plt.figure(\"output std\", (24, 6))\n",
     "    for i in range(4):\n",
-    "        plt.subplot(1, 4, i + 1)\n",
-    "        plt.title(f\"output channel {i}\")\n",
+    "        plt.subplot(3, 4, 8 + i + 1)\n",
+    "        plt.title(f\"log-std channel {i}\")\n",
     "        plt.imshow(val_output[0, i+4, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-    "    plt.show()"
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(os.path.join(fig_save_dir, \"model_inference.png\"), facecolor='white')\n",
+    "plt.show()"
    ]
   }
  ],
