udpated visualization code

--- a/src/analyse_results.ipynb
+++ b/src/analyse_results.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_id = 7 # set this to prevent overlapped saving of model and data"
+    "run_id = 5 # set this to prevent overlapped saving of model and data"
    ]
   },
   {
@@ -103,37 +103,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(\"train\", (6, 4))\n",
-    "# plt.subplot(1, 3, 1)\n",
-    "x = [i + 1 for i in range(len(epoch_loss_values))]\n",
-    "y = epoch_loss_values\n",
-    "plt.xlabel(\"epoch\")\n",
-    "plt.ylabel(\"loss - log\")\n",
-    "plt.yscale('log')\n",
-    "plt.plot(x, y, color=\"red\")\n",
-    "plt.title(\"Training: Gaussian Log Likelihood Loss\")\n",
-    "plt.savefig(os.path.join(fig_save_dir, \"train_plot.png\"), facecolor='white')\n",
-    "plt.show()\n",
+    "MULTI_TRAINING_FIGURE = True\n",
     "\n",
+    "if not MULTI_TRAINING_FIGURE:\n",
+    "    plt.figure(\"train\", (6, 4))\n",
+    "    x = [i + 1 for i in range(len(epoch_loss_values))]\n",
+    "    y = epoch_loss_values\n",
+    "    plt.xlabel(\"epoch\")\n",
+    "    plt.ylabel(\"loss - log\")\n",
+    "    plt.yscale('log')\n",
+    "    plt.plot(x, y, color=\"red\")\n",
+    "    plt.title(\"Training: Gaussian Log Likelihood Loss\", fontsize=25)\n",
+    "    plt.savefig(os.path.join(fig_save_dir, \"train_plot.png\"), facecolor='white')\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    plt.figure(\"train\", (18, 4))\n",
+    "    plt.subplot(1, 3, 1)\n",
+    "    x = [i + 1 for i in range(len(epoch_loss_values))]\n",
+    "    y = epoch_loss_values\n",
+    "    plt.xlabel(\"epoch\", fontsize=15)\n",
+    "    plt.ylabel(\"loss - log\", fontsize=15)\n",
+    "    plt.yscale('log')\n",
+    "    plt.plot(x, y, color=\"red\")\n",
+    "    plt.suptitle(\"Training: Gaussian Log Likelihood Loss\", fontsize=20)\n",
     "\n",
-    "# k = 2\n",
-    "# for zoom in [5,10]:\n",
-    "#     if len(x) > zoom:\n",
-    "#         plt.subplot(1, 3, k)\n",
-    "#         # plt.title(f\"Epoch Average Loss (from ep. {zoom})\")\n",
-    "#         x = [i + 1 for i in range(len(epoch_loss_values))]\n",
-    "#         y = epoch_loss_values\n",
-    "#         plt.xlabel(f\"epoch (from ep. {zoom})\")\n",
-    "#         # plt.ylabel(\"loss\")\n",
-    "#         plt.suptitle(\"Training: Gaussian Log Likelihood Loss\")\n",
-    "#         plt.plot(x[zoom:], y[zoom:], color=\"red\")\n",
-    "#     k += 1\n",
+    "    k = 2\n",
+    "    for zoom in [10,20]:\n",
+    "        if len(x) > zoom:\n",
+    "            plt.subplot(1, 3, k)\n",
+    "            # plt.title(f\"Epoch Average Loss (from ep. {zoom})\")\n",
+    "            x = [i + 1 for i in range(len(epoch_loss_values))]\n",
+    "            y = epoch_loss_values\n",
+    "            plt.ylabel(\"loss\", fontsize=15)\n",
+    "            plt.xlabel(f\"epoch (from ep. {zoom})\", fontsize=15)\n",
+    "            \n",
+    "            plt.plot(x[zoom:], y[zoom:], color=\"red\")\n",
+    "        k += 1\n",
+    "    plt.savefig(os.path.join(fig_save_dir, \"train_plot.png\"), facecolor='white')\n",
+    "    plt.show()\n",
     "\n",
     "plt.figure(\"val\", (6, 4))\n",
-    "plt.title(\"Validation: MSE\")\n",
+    "plt.title(\"Validation: MSE\", fontsize=20)\n",
     "x_val = [val_interval * (i + 1) for i in range(len(metric_values))]\n",
     "y_val = metric_values\n",
-    "plt.xlabel(\"epoch\")\n",
+    "plt.xlabel(\"epoch\", fontsize=15)\n",
     "plt.plot(x_val, y_val, color=\"green\")\n",
     "plt.savefig(os.path.join(fig_save_dir, \"val_plot.png\"), facecolor='white')\n",
     "plt.show()"
@@ -299,29 +312,55 @@
    "source": [
     "model.load_state_dict(torch.load(os.path.join(load_dir, \"best_metric_model.pth\")))\n",
     "model.eval()\n",
+    "channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
+    "\n",
+    "def plot_brain(index, label):\n",
+    "    start_index = None\n",
+    "    title = \"\"\n",
+    "    h_index = 75\n",
+    "\n",
+    "    if label == \"input\":\n",
+    "        start_index = 0\n",
+    "        title = \"Input\"\n",
+    "        brain_slice = val_input[0, index, :, :, h_index]\n",
+    "    elif label == \"mean\":\n",
+    "        start_index = 4\n",
+    "        title = \"Output: \" + r\"$\\mu$\"\n",
+    "        brain_slice = val_output[0, index, :, :, h_index]\n",
+    "    elif label == \"logstd\":\n",
+    "        start_index = 8\n",
+    "        title = \"Output: log(\" + r\"$\\sigma$\" + \")\"\n",
+    "        brain_slice = val_output[0, index+4, :, :, h_index]\n",
+    "    plt.subplot(3, 4, start_index + index + 1)\n",
+    "    if label == \"input\":\n",
+    "        plt.title(channels[i], fontsize=30)\n",
+    "    brain_slice = brain_slice.detach().cpu().T # .flip(0)\n",
+    "    plt.imshow(brain_slice, cmap=\"gray\")\n",
+    "    plt.xlabel('')\n",
+    "    if i == 0:\n",
+    "        plt.ylabel(title, fontsize=30)\n",
+    "    plt.gca().xaxis.set_ticks([])\n",
+    "    plt.gca().yaxis.set_ticks([])\n",
+    "    cbar = plt.colorbar()\n",
+    "    cbar.ax.tick_params(labelsize=20)\n",
+    "\n",
+    "\n",
     "with torch.no_grad():\n",
-    "    # select one image to evaluate and visualize the model output\n",
     "    val_input = sample_ds[6][\"image\"].unsqueeze(0).to(device)\n",
     "    mask_indices = [False, False, False, False]\n",
     "    val_input[:, mask_indices, ...] = 0\n",
     "    val_output = inference(val_input)\n",
-    "    # val_output = post_trans(val_output[0])\n",
+    "\n",
+    "\n",
     "    plt.figure(\"image\", (24, 18))\n",
     "    for i in range(4):\n",
-    "        plt.subplot(3, 4, i + 1)\n",
-    "        plt.title(f\"image channel {i}\")\n",
-    "        plt.imshow(val_input[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-    "\n",
+    "        plot_brain(i, \"input\")\n",
     "    for i in range(4):\n",
-    "        plt.subplot(3, 4, 4 + i + 1)\n",
-    "        plt.title(f\"mean channel {i}\")\n",
-    "        plt.imshow(val_output[0, i, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
-    "\n",
+    "        plot_brain(i, \"mean\")\n",
     "    for i in range(4):\n",
-    "        plt.subplot(3, 4, 8 + i + 1)\n",
-    "        plt.title(f\"log-std channel {i}\")\n",
-    "        plt.imshow(val_output[0, i+4, :, :, 70].detach().cpu(), cmap=\"gray\")\n",
+    "        plot_brain(i, \"logstd\")\n",
     "\n",
+    "plt.suptitle(\"\")\n",
     "plt.tight_layout()\n",
     "plt.savefig(os.path.join(fig_save_dir, \"model_inference.png\"), facecolor='white')\n",
     "plt.show()"
