--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -38,9 +38,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "run_id = 6\n",
-        "DO_MASK = True\n",
-        "SET_VARIANCE = False\n",
+        "run_id = 8\n",
+        "DO_MASK = False\n",
+        "SET_VARIANCE = True\n",
         "max_epochs = 100\n",
         "val_interval = 1\n",
         "train_data_ratio = 0.5\n",
@@ -114,7 +114,6 @@
         "if is_notebook():\n",
         "    !python -c \"import monai\" || pip install -q \"monai-weekly[nibabel, tqdm]\"\n",
         "    !python -c \"import matplotlib\" || pip install -q matplotlib\n",
-        "    # !python -c \"import onnxruntime\" || pip install -q onnxruntime\n",
         "    %matplotlib inline"
       ]
     },
@@ -154,6 +153,7 @@
         "from monai.networks.nets import UNet\n",
         "from monai.transforms import (\n",
         "    LoadImage,\n",
+        "    Resize,\n",
         "    NormalizeIntensity,\n",
         "    Orientation,\n",
         "    RandFlip,\n",
@@ -235,11 +235,11 @@
       "outputs": [],
       "source": [
         "save_dir = os.path.join(root_dir, f\"run_{run_id}\")\n",
-        "if os.path.exists(save_dir) and os.path.isdir(save_dir):\n",
+        "if os.path.exists(save_dir) and os.path.isdir(save_dir) and len(os.listdir(save_dir)) != 0:\n",
         "    print(f\"{save_dir} already exists. Avoid overwrite by updating run_id.\")\n",
         "    exit()\n",
         "else:\n",
-        "    os.makedirs(save_dir)"
+        "    os.makedirs(save_dir, exist_ok=True)"
       ]
     },
     {
@@ -260,13 +260,6 @@
       "outputs": [],
       "source": [
         "set_determinism(seed=RANDOM_SEED)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Challenge (unsolved): How to ensure only input images have some modalities dropped, and output modalities have the entire data?"
       ]
     },
     {
@@ -298,6 +291,7 @@
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
         "        RandSpatialCrop(roi_size=[224, 224, 144], random_size=False),\n",
+        "        Resize(spatial_size=(56, 56, 36)),\n",
         "        RandFlip(prob=0.5, spatial_axis=0),\n",
         "        RandFlip(prob=0.5, spatial_axis=1),\n",
         "        RandFlip(prob=0.5, spatial_axis=2),\n",
@@ -316,6 +310,7 @@
         "            pixdim=(1.0, 1.0, 1.0),\n",
         "            mode=(\"bilinear\", \"nearest\"),\n",
         "        ),\n",
+        "        Resize(spatial_size=(56, 56, 36)),\n",
         "        NormalizeIntensity(nonzero=True, channel_wise=True),\n",
         "    ]\n",
         ")"
@@ -425,6 +420,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# temp code:\n",
+        "# change resolution of image from 1mm3 to 4mm3\n",
+        "val_data_example = sample_ds[6]\n",
+        "print(f\"image shape: {val_data_example['image'].shape}\")"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NXd4zV8DKX7S"
@@ -443,14 +450,16 @@
       "source": [
         "# pick one image from DecathlonDataset to visualize and check the 4 channels\n",
         "if is_notebook():\n",
+        "    channels = [\"FLAIR\", \"T1w\", \"T1gd\", \"T2w\"]\n",
         "    val_data_example = sample_ds[6]\n",
         "    print(f\"image shape: {val_data_example['image'].shape}\")\n",
         "    plt.figure(\"image\", (24, 6))\n",
         "    for i in range(4):\n",
         "        plt.subplot(1, 4, i + 1)\n",
-        "        plt.title(f\"image channel {i}\")\n",
-        "        plt.imshow(val_data_example[\"image\"][i, :, :, 60].detach().cpu(), cmap=\"gray\")\n",
-        "        plt.colorbar()\n",
+        "        plt.title(channels[i], fontsize=30)\n",
+        "        plt.imshow(val_data_example[\"image\"][i, :, :, 18].detach().cpu().T, cmap=\"gray\")\n",
+        "        cbar = plt.colorbar()\n",
+        "        cbar.ax.tick_params(labelsize=20)\n",
         "    plt.show()"
       ]
     },
@@ -551,13 +560,6 @@
         "scaler = torch.cuda.amp.GradScaler()\n",
         "# enable cuDNN benchmark\n",
         "torch.backends.cudnn.benchmark = True"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Run the following cells only if performing a new trial/run"
       ]
     },
     {
